# OpenMS

src/openswathalgo/include/OpenMS/ANALYSIS/OPENSWATH/OPENSWATHALGO/: OpenSwathAlgoConfig.h  OpenSwathAlgoConfig.h~
src/peakinvestigator/: CMakeLists.txt
src/peakinvestigator/include/OpenMS/TRANSFORMATIONS/RAW2PEAK/PEAKINVESTIGATOR/: BaseAction.h  DeleteAction.h  InitAction.h  PeakInvestigator.h  PiVersionsAction.h  PrepAction.h  RtoDialog.h  RunAction.h  SftpAction.h  StatusAction.h  VersionDialog.h
src/peakinvestigator/include/OpenMS/TRANSFORMATIONS/RAW2PEAK/PEAKINVESTIGATOR/SYSTEM/: AbstractSecureFileTransfer.h  LibSSH2SecureFileTransfer.h  PSCPSecureFileTransfer.h
src/peakinvestigator/include/OpenMS/VISUAL/PEAKINVESTIGATOR/: MassRangeDialog.h  PeakInvestigatorInitDialog.h  sources.cmake
src/peakinvestigator/include/OpenMS/VISUAL/PEAKINVESTIGATOR/UIC/: MassRangeDialog.ui  PeakInvestigatorInitDialog.ui  sources.cmake
src/peakinvestigator/source/TRANSFORMATIONS/RAW2PEAK/PEAKINVESTIGATOR/: BaseAction.cpp  DeleteAction.cpp  InitAction.cpp  PeakInvestigator.cmake  PeakInvestigator.cpp  PiVersionsAction.cpp  PrepAction.cpp  RtoDialog.cpp  RunAction.cpp  SftpAction.cpp  StatusAction.cpp  VersionDialog.cpp
src/peakinvestigator/source/TRANSFORMATIONS/RAW2PEAK/PEAKINVESTIGATOR/SYSTEM/: AbstractSecureFileTransfer.cpp  LibSSH2SecureFileTransfer.cpp  PSCPSecureFileTransfer.cpp
src/peakinvestigator/source/VISUAL/PEAKINVESTIGATOR/: MassRangeDialog.cpp  PeakInvestigatorInitDialog.cpp  sources.cmake
src/tests/class_tests/peakinvestigator/: CMakeLists.txt  Parsing.cpp  PeakInvestigator_Dialogs_test.cpp  PeakInvestigator_Parsing_test.cpp  PeakInvestigator_SaaS_test.cpp
src/utils/: CMakeLists.txt  PeakInvestigator.cpp  executables.cmake
